# legendary-dollop

./: LICENSE  README.md
maker-learning-platform/: .gitignore  README.md  pyproject.toml  requirements.txt
maker-learning-platform/content/topics/command-line-mastery/: REVIEW_NOTES.md  UX_SIMULATION.md  concepts.md  levels.md  milestone-projects.md
maker-learning-platform/content/topics/command-line-mastery/projects/: level-0-directory-navigator.yaml  level-1-file-organizer.yaml  level-2-log-analyzer.yaml  level-3-system-dashboard.yaml  level-4-backup-automation.yaml
maker-learning-platform/content/topics/command-line-mastery/tutorials/: module-01-terminal-fundamentals.md  module-02-navigation-basics.md  module-03-file-operations.md  module-04-viewing-files.md  module-05-searching-finding.md  module-06-text-processing.md  (+6 more)
maker-learning-platform/content/topics/project-foundations/: REVIEW_NOTES.md  UX_SIMULATION.md  concepts.md  levels.md  milestone-projects.md
maker-learning-platform/content/topics/python/: concepts.md  levels.md  milestone-projects.md
maker-learning-platform/core/: __init__.py
maker-learning-platform/core/capability_checker/: __init__.py  checker.py
maker-learning-platform/core/progress_tracker/: __init__.py  assessments.py  tracker.py
maker-learning-platform/core/project_validator/: __init__.py  validator.py
maker-learning-platform/core/skill_tree/: __init__.py
maker-learning-platform/docs/: ARCHITECTURE_DECISIONS.md  CORE_PRINCIPLES.md  DEPLOYMENT.md  FUTURE_IDEAS.md  PROJECT_VISION.md  ROADMAP.md  SUBJECT_CATALOG.md  TASK_QUEUE.md  TERMINOLOGY.md
maker-learning-platform/docs/templates/: PROJECT_TEMPLATE.md  SUBJECT_TEMPLATE.md
maker-learning-platform/platform/: __init__.py
maker-learning-platform/platform/cli/: __init__.py  main.py
maker-learning-platform/tools/: __init__.py
maker-learning-platform/tools/context_manager/: __init__.py
(+23 files in other folders)
